fix date spacing

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -43,3 +43,6 @@
     font-size: 14px;
     display: block;
 }
+.phone-preview .box-date {
+    margin-top: 5px;
+}
